<resources>
    <string name="app_name">Opencaching</string>
    <string name="terms_of_service_website">https://wiki.opencaching.pl/index.php?title=Regulamin_użytkownika_OC_PL</string>
    <string name="google_maps_key">AIzaSyB2I-uCmanDnjzqZQyYZjAHGy29XElc4NY</string>
    <string name="google_geocoding_key">AIzaSyA2XAPjU3kU11fGPQznBFmihw5puUaSqCk</string>
    <string name="opencaching_key">eSLCuVzRJJsYUUfUs6Su</string>
    <string name="opencaching_secret_key">nGdfx64ksCvwk7XDSnmsVCgGpnsFh9ZwG4B5Yweg</string>

    <!-- Navigation Drawer menu labels -->
    <string name="main_menu">Menu główne</string>
    <string name="user_menu">Menu użytkownika</string>
    <string name="options">Menu użytkownika</string>
    <string name="nav_news">Aktualności</string>
    <string name="nav_map">Mapa</string>
    <string name="nav_drafts">Szkice</string>
    <string name="nav_notifications">Powiadomienia</string>
    <string name="nav_search">Szukaj</string>
    <string name="nav_settings">Ustawienia</string>
    <string name="nav_logout">Wyloguj się</string>
    <string name="action_logout">Wyloguj się</string>
    <string name="nav_user_profile">Profil</string>
    <string name="nav_user_stats">Moje statystyki</string>
    <string name="nav_user_geocaches">Moje skrzynki</string>
    <string name="nav_user_watched">Obserwowane</string>
    <string name="nav_user_neighbourhood">Moja okolica</string>

    <!--Authorization-->
    <string name="login">Zaloguj</string>
    <string name="password">Hasło</string>
    <string name="username">Login</string>
    <string name="invalid_username_or_password">Nieprawidłowy login lub hasło</string>

    <!--Geocahce info-->
    <string name="found">znaleziona</string>
    <string name="not_found">nieznaleziona</string>
    <string name="recommended">rekomendowana</string>
    <string name="info_size">Wielkość: %s</string>
    <string name="info_rating">Ocena: %s</string>
    <string name="info_owner">Właściciel: %s</string>
    <string name="info_type">Typ: <b>%s</b></string>
    <string name="info_last_found">Ostatnio znaleziona:\n%s</string>
    <string name="info_empty">%s</string>

    <!--Sizes of geocache containers-->
    <string name="size_none">Bez pojemnika</string>
    <string name="size_nano">Nano</string>
    <string name="size_micro">Mikro</string>
    <string name="size_small">Mała</string>
    <string name="size_regular">Normalna</string>
    <string name="size_large">Duża</string>
    <string name="size_xlarge">Bardzo duża</string>

    <!--Types of geocache-->
    <string name="type_traditional">Tradycyjna</string>
    <string name="type_multi">Multicache</string>
    <string name="type_quiz">Quiz</string>
    <string name="type_virtual">Wirtualna</string>
    <string name="type_event">Wydarzenie</string>
    <string name="type_moving">Mobilna</string>
    <string name="type_own">Own</string>
    <string name="type_unknown">Nietypowa</string>
    <string name="type_webcam">Webcam</string>

    <!--Rates of found geocache log-->
    <string name="rate_perfect">Znakomita</string>
    <string name="rate_good">Dobra</string>
    <string name="rate_normal">Normalna</string>
    <string name="rate_below_average">Poniżej przeciętnej</string>
    <string name="rate_below_average_two_lines">Poniżej\nprzeciętnej</string>
    <string name="rate_bad">Słaba</string>

    <!--Map Filter-->
    <string name="filter_geocaches">Filtruj skrzynki</string>
    <string name="filter_ignored">Ignorowane</string>
    <string name="filter_own">Własne</string>
    <string name="filter_found">Znalezione</string>
    <string name="filter_not_found">Nieznalezione</string>
    <string name="filter_contains_trackable">Tylko z geokretami</string>
    <string name="filter_temporary_unavailable">Tymczasowo niedostępne</string>
    <string name="filter_archived">Zarchiwizowane</string>
    <string name="filter_ftf">Tylko FTF</string>
    <string name="filter_power_trail">Tylko z geocieżek</string>
    <string name="filter_available">Dostępne</string>

    <!--Main Map-->
    <string name="move_map_to_show_more_geocaches">Przesuń mapę aby wczytać więcej skrzynek</string>
    <string name="zoom_map_to_download">Przybliż mapę aby pobrać skrzynki</string>
    <string name="no_matches_for_location_querry">Nie udało się znaleźć pasujących wyników</string>
    <string name="no_cache_results">Nie znaleziono żadnych skrzynek</string>
    <string name="map_search_hint">Wyszukaj miejsca na mapie</string>

    <!--Base messages-->
    <!--<string name="check_internet_connection">Sprawdź połączenie internetowe</string>-->
    <string name="no_internet_connection">Brak połączenia internetowego</string>
    <string name="something_went_wrong">Ops… Coś poszło nie tak.</string>
    <string name="session_has_ended">Sesja została zakończona, zaloguj się ponownie</string>
    <string name="single_back_press_message">Wciśnij ponownie Wstecz aby wyjść</string>
    <string name="couldn_connect_to_server">Nie udało się połączyć z serwerem</string>

    <!--Attributes-->
    <string name="attribute_title_password">Wymagane hasło</string>
    <string name="attribute_title_password_description">Aby wpisać się w logu internetowym wymagane jest hasło, które zazwyczaj jest dostępne w miejscu ukrycia skrzynki</string>

    <!--New Log-->
    <string name="new_log">Nowy wpis</string>
    <string name="submit_log">Dodaj wpis</string>
    <string name="log_type">Rodzaj wpisu</string>
    <string name="date">Data</string>
    <string name="rate">Ocena</string>
    <string name="comment">Treść wpisu</string>
    <string name="new_log_comment_hint">Podziel się swoimi wrażeniami z immymi!</string>

    <!--Geocache log type-->
    <string name="log_found_it">Znaleziona</string>
    <string name="log_not_found">Nieznaleziona</string>
    <string name="log_available">Gotowa do szukania</string>
    <string name="log_archived">Zarchiwizowana</string>
    <string name="log_temporarily_unavailable">Tymczasowo niedostępna</string>
    <string name="log_attended">Uczestniczył</string>
    <string name="log_will_attend">Zameirza uczestniczyć</string>
    <string name="log_comment">Komentarz</string>
    <string name="log_needs_maintenance">Potrzebny serwis</string>
    <string name="log_maintenance_performed">Serwis wykonany</string>


    <string name="info">Info</string>
    <string name="logs">Logi</string>
    <string name="today">Dzisiaj</string>
    <string name="yesterday">Wczoraj</string>
    <string name="agree_terms_of_service">Korzystając z aplikacji akceptujesz %1$s.</string>
    <string name="terms_of_service">regulamin serwisu</string>
    <string name="info_found">%d x znaleziona</string>
    <string name="info_not_found">%d x nieznaleziona</string>
    <string name="info_recommended">%d x rekomendowana</string>
    <string name="separated_strings" formatted="false" translatable="false">%s | %s</string>
    <string name="navigate">Prowadź</string>
    <string name="waiting_for_ftf">Czeka na FTF!</string>
    <string name="filter">Filtruj</string>
    <string name="search">Szukaj</string>
    <string name="list_view">Pokaż w liście</string>
    <string name="save_all">Zapisz skrzynki</string>
    <string name="compass">Kompas</string>
    <string name="permission_denied_message_fine_location">Ta funkcja wymaga uprawnie do lokalizacji urządzenia.</string>
    <string name="save">zapisz</string>
    <string name="difficulty">Trudność</string>
    <string name="terrain">Teren</string>
    <string name="size">Wielkość</string>
    <string name="hint">Podpowiedź</string>
    <string name="dificulty_info">Trudność:</string>
    <string name="terrain_info">Teren:</string>
    <string name="geocache_hint_unavailable_message">Autor nie udostępnił podpowiedzi dla tej skrzynki.</string>
    <string name="ok">OK</string>
    <string name="attributes">Atrybuty</string>
    <string name="map_type_default">Domyślny</string>
    <string name="map_type_satellite">Satelita</string>
    <string name="map_type_terrain">Teren</string>
    <string name="map_type">Typ mapy</string>
    <string name="gallery">Galeria</string>
    <string name="description">Opis</string>
    <string name="separated_indicators" translatable="false" >%d/%d</string>
    <string name="separated_time" translatable="false" >%s:%s</string>
    <string name="geocache_submited">Wpis dodany</string>
    <string name="password_hint">Podaj wymagane hasło do wpisu</string>
    <string name="use_pattern">Zastosuj wzór</string>
    <string name="recommendation">Reko</string>
    <string name="spoiler">Spoiler</string>
    <string name="new_log_auto_submit_message">Wpis zostanie automatycznie wysłany po uzyskaniu połączenia</string>
    <string name="log_not_synchronized_yet">Wpis nie został jeszcze zsynchronizowany</string>
    <string name="draw_of_log">Szkic wpisu</string>
    <string name="draft">Szkic</string>
    <string name="add_image">Dodaj zdjęcia</string>
    <string name="save_draft">Zapisz szkic</string>
    <string name="geocache_map_info_found">Znaleziona</string>
    <string name="geocache_map_info_not_found">Nieznaleziona</string>
    <string name="cancel">Anuluj</string>
    <string name="yes">Tak</string>
    <string name="set_rate">Ustaw ocenę</string>
    <string name="set_comment">Ustaw komentarz</string>
    <string name="multiple_choice">Tryb zaznaczania</string>
    <string name="standard_mode">Tryb standardowy</string>
    <string name="post_log">Wyślij wpis</string>
    <string name="delete_draft">Usuń szkic</string>
    <string name="delete_drafts">Usuń szkice</string>
    <string name="show_geocache">Pokaż skrzynkę</string>
    <string name="post_logs">Wyślij wpisy</string>
    <string name="log_sync_success_message">Wpis został pomyślnie wysłany</string>
    <string name="log_sync_fail_message">Wpis odrzucony przez serwer</string>
    <string name="logs_sync_success_message">Pomyślnie wysłano wszystkie wpisy</string>
    <string name="log_sync_with_errors_message">Niektóre wpisy zostały odrzucone przez serwer. Sprawdź ich błędy.</string>
    <string name="error_message">Błąd wpisu</string>



</resources>
