<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_menu_top">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/nav_search" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_menu_user">
        <item
            android:id="@+id/nav_user_stats"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_user_stats" />

        <item
            android:id="@+id/nav_user_geocaches"
            android:icon="@drawable/ic_logout_arrow_24dp"
            android:title="@string/nav_user_geocaches" />

        <item
            android:id="@+id/nav_user_neighbourhood"
            android:icon="@drawable/ic_logout_arrow_24dp"
            android:title="@string/nav_user_neighbourhood" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_arrow_24dp"
            android:title="@string/nav_logout" />
    </group>

</menu>