<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="2"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="3"
        android:title="@string/save_all"
        app:showAsAction="never"
        android:enabled="false"/>

    <item
        android:id="@+id/action_list_view"
        android:orderInCategory="3"
        android:title="@string/list_view"
        app:showAsAction="never"
        android:enabled="false"/>

</menu>