<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_multiple_choice"
        android:icon="@drawable/ic_multiple_choice"
        android:orderInCategory="0"
        android:title="@string/multiple_choice"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_post"
        android:orderInCategory="1"
        android:title="@string/post_logs"
        android:visible="false"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_set_rate"-->
        <!--android:orderInCategory="2"-->
        <!--android:title="@string/set_rate"-->
        <!--android:visible="false"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/action_set_comment"-->
        <!--android:orderInCategory="3"-->
        <!--android:title="@string/set_comment"-->
        <!--android:visible="false"-->
        <!--app:showAsAction="never" />-->

    <item
    android:id="@+id/action_delete"
    android:orderInCategory="4"
    android:title="@string/delete_drafts"
    android:visible="false"
    app:showAsAction="never" />

</menu>